make  new repo version of JRPCAgents be version 2.0